praying this fixes chrome transitions on mobile

--- a/src/assets/styles/elements/gallery.scss
+++ b/src/assets/styles/elements/gallery.scss
@@ -12,6 +12,7 @@
             width: 25%;
             opacity: 0.6;
             transition: opacity 0.2s ease;
+            -webkit-transition: opacity 0.2s ease;
             cursor: pointer;
             &:hover, &.active{
                 opacity: 1;
