--- a/src/assets/styles/templates/home.scss
+++ b/src/assets/styles/templates/home.scss
@@ -19,6 +19,7 @@
             font-size: 16px;
             opacity: 0;
             transition: opacity 0.4s .8s ease;
+            -webkit-transition: opacity 0.4s .8s ease;
             z-index: 10;
             @media (min-width: 768px) and (max-width: 1200px){
                 grid-column: 6 / span 4;
@@ -32,8 +33,10 @@
                 justify-content: center;
                 cursor: pointer;
                 transition: background-color 0.2s ease;
+                -webkit-transition: background-color 0.2s ease;
                 i{
                     transition: transform 0.2s ease;
+                    -webkit-transition: transform 0.2s ease;
                 }
                 &:hover{
                     background-color: #fff;
@@ -98,6 +101,7 @@
             height: 100%;
             width: 100%;
             transition: transform 0.7s ease;
+            -webkit-transition: transform 0.7s ease;
             transform: translateX(0%);
             overflow: hidden;
         }
@@ -109,6 +113,7 @@
                 object-fit: cover;
                 object-position: center;
                 transition: transform 0.7s ease;
+                -webkit-transition: transform 0.7s ease;
                 transform: translateX(0%);
             }
             &.slide-contain{
@@ -134,16 +139,19 @@
             z-index: 5;
             .image-container, .slide-image img{
                 transition-delay: 0.4s;
+                -webkit-transition-delay: 0.4s;
             }
             h1, h2{
                 opacity: 1;
                 transform: translateY(0px);
                 transition-delay: 0.5s;
+                -webkit-transition-delay: 0.5s;
             }
             p{
                 opacity: 1;
                 transform: translateY(0px);
                 transition-delay: 0.6s;
+                -webkit-transition-delay: 0.6s;
             }
         }
         &.slide-1{
@@ -295,6 +303,7 @@
             opacity: 0;
             transform: translateY(15px);
             transition: all 0.3s ease;
+            -webkit-transition: all 0.3s ease;
             margin-top: 1rem;
             margin-bottom: 1rem;
             @media (max-width: 767px){
@@ -306,6 +315,7 @@
             opacity: 0;
             transform: translateY(10px);
             transition: all 0.2s ease;
+            -webkit-transition: all 0.2s ease;
             &.subtitle{
                 font-size: 2rem;
                 padding-left: 30px;
